various stupid updates

--- a/keyapplication/keyapp/app/globals.css
+++ b/keyapplication/keyapp/app/globals.css
@@ -3,9 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,4 +28,14 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.breadrumbs {
+  margin: .25em 0;
+}
+.breadrumb{
+  margin: 0 .25em;
+}
+.breadrumb::before {
+  content: '>';
 }
