--- a/keyapplication/keyapp/app/globals.css
+++ b/keyapplication/keyapp/app/globals.css
@@ -22,6 +22,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    background-color: #ffc500;
 }
 
 @layer utilities {
@@ -39,7 +40,7 @@ body {
 .breadrumb a {
   text-decoration: underline;
 }
-.breadrumb::before {
+.breadrumb:not(:first-child):before {
   content: '> ';
 }
 
